tetrate/tis0204/e2e/good-resource.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: good-resource-1
spec:
  host: "app-service.test.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: good-resource-2
spec:
  host: "app-service.test.svc.cluster.local"
