tetrate/tis0204/e2e/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-mtls-overrides
spec:
  validationFailureAction: Enforce
